--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy-changes": "ng build --configuration production --base-href='https://Zambelli24.github.io/personal-website/' && ng deploy" 
+    "deploy-changes": "ng build --configuration production --base-href='https://Zambelli24.github.io/personal-website/' && ng deploy"
   },
   "private": true,
   "dependencies": {
@@ -16,6 +16,7 @@
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.1",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
