--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "personal-website",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
