--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "lint": "ng lint",
+    "lint:fix": "ng lint --fix",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "deploy-changes": "ng build --configuration production --base-href='https://Zambelli24.github.io/personal-website/' && ng deploy"
@@ -33,10 +35,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.0",
+    "@angular-eslint/builder": "16.2.0",
+    "@angular-eslint/eslint-plugin": "16.2.0",
+    "@angular-eslint/eslint-plugin-template": "16.2.0",
+    "@angular-eslint/schematics": "16.2.0",
+    "@angular-eslint/template-parser": "16.2.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "angular-cli-ghpages": "^1.0.6",
+    "eslint": "^8.49.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
